re PR middle-end/43390 (ICE: integral result type precision does  not match field size of BIT_FIELD_REF)

2010-03-22  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/43390
	* tree-vect-stmts.c (get_vectype_for_scalar_type): Make
	sure vector extracts are type correct.

	* gfortran.fortran-torture/execute/pr43390.f90: New testcase.

From-SVN: r157624